exports[`createHakukohde > should be able to create ammatillinen hakukohde #0`] =
{
  "esikatselu": true,
  "externalId": null,
  "hakuOid": "4.1.1.1.1.1",
  "hakuajat": [
    {
      "alkaa": "2019-04-02T10:45",
      "paattyy": "2019-11-25T23:59"
    }
  ],
  "hakukohdeKoodiUri": "hakukohteetperusopetuksenjalkeinenyhteishaku_101#1",
  "hakulomakeAtaruId": "lomake_1",
  "hakulomakeKuvaus": {},
  "hakulomakeLinkki": {},
  "hakulomaketyyppi": "ataru",
  "jarjestyspaikkaOid": "1.2.246.562.10.45854578546",
  "kaytetaanHaunAikataulua": false,
  "kaytetaanHaunHakulomaketta": false,
  "kielivalinta": [
    "fi"
  ],
  "liitteet": [
    {
      "kuvaus": {
        "fi": "<p>Kuvaus</p>"
      },
      "nimi": {
        "fi": "Nimi"
      },
      "toimitusaika": "2019-11-25T23:59",
      "toimitusosoite": {
        "osoite": {
          "osoite": {
            "fi": "Osoite"
          },
          "postinumeroKoodiUri": "posti_00350#2"
        },
        "sahkoposti": "sahkoposti@email.com",
        "verkkosivu": "http://example.com"
      },
      "toimitustapa": "osoite",
      "tyyppiKoodiUri": "liitetyypitamm_4#1"
    }
  ],
  "liitteetOnkoSamaToimitusaika": false,
  "liitteetOnkoSamaToimitusosoite": false,
  "liitteidenToimitusaika": null,
  "liitteidenToimitusosoite": null,
  "liitteidenToimitustapa": null,
  "metadata": {
    "aloituspaikat": {
      "ensikertalaisille": null,
      "kuvaus": {},
      "lukumaara": 10
    },
    "hakukohteenLinja": null,
    "kaytetaanHaunAlkamiskautta": true,
    "koulutuksenAlkamiskausi": null,
    "kynnysehto": {
      "fi": "<p>Kynnysehto</p>"
    },
    "valintakokeidenYleiskuvaus": {
      "fi": "<p>Valintakokeiden kuvaus</p>"
    },
    "valintaperusteenValintakokeidenLisatilaisuudet": [
      {
        "id": "testi-id-123",
        "tilaisuudet": [
          {
            "aika": {
              "alkaa": "2019-04-02T10:45",
              "paattyy": "2019-04-02T19:00"
            },
            "jarjestamispaikka": {
              "fi": "paikka"
            },
            "lisatietoja": {
              "fi": "<p>lisatietoja</p>"
            },
            "osoite": {
              "osoite": {
                "fi": "osoite"
              },
              "postinumeroKoodiUri": "posti_00350#2"
            }
          }
        ]
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {},
  "organisaatioOid": "1.2.246.562.10.52251087186",
  "pohjakoulutusvaatimusKoodiUrit": [
    "pohjakoulutusvaatimuskouta_pk#1"
  ],
  "pohjakoulutusvaatimusTarkenne": {
    "fi": "<p>Tarkenne</p>"
  },
  "tila": "julkaistu",
  "toinenAsteOnkoKaksoistutkinto": true,
  "toteutusOid": "2.1.1.1.1.1",
  "valintakokeet": [
    {
      "metadata": {
        "erityisjarjestelytMahdollisia": true,
        "liittyyEnnakkovalmistautumista": true,
        "ohjeetEnnakkovalmistautumiseen": {
          "fi": "<p>ohjeet ennakkovalmistautumiseen</p>"
        },
        "ohjeetErityisjarjestelyihin": {
          "fi": "<p>ohjeet erityisjärjestelyihin</p>"
        },
        "tietoja": {
          "fi": "<p>Tietoa hakijalle</p>"
        },
        "vahimmaispisteet": 10.03
      },
      "nimi": {
        "fi": "nimi"
      },
      "tilaisuudet": [
        {
          "aika": {
            "alkaa": "2019-04-02T10:45",
            "paattyy": "2019-04-02T19:00"
          },
          "jarjestamispaikka": {
            "fi": "paikka"
          },
          "lisatietoja": {
            "fi": "<p>lisatietoja</p>"
          },
          "osoite": {
            "osoite": {
              "fi": "osoite"
            },
            "postinumeroKoodiUri": "posti_00350#2"
          }
        }
      ],
      "tyyppiKoodiUri": "valintakokeentyyppi_8#1"
    }
  ],
  "valintaperusteId": "649adb37-cd4d-4846-91a9-84b58b90f928"
};

exports[`createHakukohde > should be able to create korkeakoulu hakukohde #0`] =
{
  "esikatselu": true,
  "externalId": null,
  "hakuOid": "4.1.1.1.1.1",
  "hakuajat": [
    {
      "alkaa": "2019-04-02T10:45",
      "paattyy": "2019-11-25T23:59"
    }
  ],
  "hakukohdeKoodiUri": null,
  "hakulomakeAtaruId": "lomake_1",
  "hakulomakeKuvaus": {},
  "hakulomakeLinkki": {},
  "hakulomaketyyppi": "ataru",
  "jarjestyspaikkaOid": "1.2.246.562.10.45854578546",
  "kaytetaanHaunAikataulua": false,
  "kaytetaanHaunHakulomaketta": false,
  "kielivalinta": [
    "fi"
  ],
  "liitteet": [
    {
      "kuvaus": {
        "fi": "<p>Kuvaus</p>"
      },
      "nimi": {
        "fi": "Nimi"
      },
      "toimitusaika": "2019-11-25T23:59",
      "toimitusosoite": {
        "osoite": {
          "osoite": {
            "fi": "Osoite"
          },
          "postinumeroKoodiUri": "posti_00350#2"
        },
        "sahkoposti": "sahkoposti@email.com",
        "verkkosivu": "http://example.com"
      },
      "toimitustapa": "osoite",
      "tyyppiKoodiUri": "liitetyypitamm_4#1"
    }
  ],
  "liitteetOnkoSamaToimitusaika": false,
  "liitteetOnkoSamaToimitusosoite": false,
  "liitteidenToimitusaika": null,
  "liitteidenToimitusosoite": null,
  "liitteidenToimitustapa": null,
  "metadata": {
    "aloituspaikat": {
      "ensikertalaisille": 5,
      "kuvaus": {},
      "lukumaara": 10
    },
    "hakukohteenLinja": null,
    "kaytetaanHaunAlkamiskautta": false,
    "koulutuksenAlkamiskausi": {
      "alkamiskausityyppi": "henkilokohtainen suunnitelma",
      "henkilokohtaisenSuunnitelmanLisatiedot": {
        "fi": "<p>Henkilökohtaisen suunnitelman lisätiedot</p>"
      },
      "koulutuksenAlkamiskausiKoodiUri": null,
      "koulutuksenAlkamispaivamaara": null,
      "koulutuksenAlkamisvuosi": null,
      "koulutuksenPaattymispaivamaara": null
    },
    "kynnysehto": {
      "fi": "<p>Kynnysehto</p>"
    },
    "valintakokeidenYleiskuvaus": {
      "fi": "<p>Valintakokeiden kuvaus</p>"
    },
    "valintaperusteenValintakokeidenLisatilaisuudet": [
      {
        "id": "testi-id-123",
        "tilaisuudet": [
          {
            "aika": {
              "alkaa": "2019-04-02T10:45",
              "paattyy": "2019-04-02T19:00"
            },
            "jarjestamispaikka": {
              "fi": "paikka"
            },
            "lisatietoja": {
              "fi": "<p>lisatietoja</p>"
            },
            "osoite": {
              "osoite": {
                "fi": "osoite"
              },
              "postinumeroKoodiUri": "posti_00350#2"
            }
          }
        ]
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Hakukohteen nimi"
  },
  "organisaatioOid": "1.2.246.562.10.52251087186",
  "pohjakoulutusvaatimusKoodiUrit": [
    "pohjakoulutusvaatimuskouta_pk#1"
  ],
  "pohjakoulutusvaatimusTarkenne": {
    "fi": "<p>Tarkenne</p>"
  },
  "tila": "julkaistu",
  "toinenAsteOnkoKaksoistutkinto": false,
  "toteutusOid": "2.1.1.1.1.1",
  "valintakokeet": [
    {
      "metadata": {
        "erityisjarjestelytMahdollisia": true,
        "liittyyEnnakkovalmistautumista": true,
        "ohjeetEnnakkovalmistautumiseen": {
          "fi": "<p>ohjeet ennakkovalmistautumiseen</p>"
        },
        "ohjeetErityisjarjestelyihin": {
          "fi": "<p>ohjeet erityisjärjestelyihin</p>"
        },
        "tietoja": {
          "fi": "<p>Tietoa hakijalle</p>"
        },
        "vahimmaispisteet": 10.03
      },
      "nimi": {
        "fi": "nimi"
      },
      "tilaisuudet": [
        {
          "aika": {
            "alkaa": "2019-04-02T10:45",
            "paattyy": "2019-04-02T19:00"
          },
          "jarjestamispaikka": {
            "fi": "paikka"
          },
          "lisatietoja": {
            "fi": "<p>lisatietoja</p>"
          },
          "osoite": {
            "osoite": {
              "fi": "osoite"
            },
            "postinumeroKoodiUri": "posti_00350#2"
          }
        }
      ],
      "tyyppiKoodiUri": "valintakokeentyyppi_8#1"
    }
  ],
  "valintaperusteId": "649adb37-cd4d-4846-91a9-84b58b90f928"
};

exports[`editHakukohde > should be able to edit hakukohde #0`] =
{
  "alkamiskausiKoodiUri": "kausi_k#1",
  "alkamisvuosi": "2024",
  "esikatselu": false,
  "externalId": null,
  "hakuOid": "4.1.1.1.1.1",
  "hakuajat": [
    {
      "alkaa": "2011-11-11T10:30",
      "paattyy": "2011-11-12T11:45"
    }
  ],
  "hakukohdeKoodiUri": null,
  "hakulomake": {},
  "hakulomakeAtaruId": "12345",
  "hakulomakeKuvaus": {},
  "hakulomakeLinkki": {},
  "hakulomaketyyppi": "ataru",
  "jarjestyspaikkaOid": "1.2.246.562.10.45854578546",
  "kaytetaanHaunAikataulua": false,
  "kaytetaanHaunHakulomaketta": false,
  "kielivalinta": [
    "fi"
  ],
  "liitteet": [
    {
      "kuvaus": {
        "fi": "<p>Kuvaus</p>"
      },
      "nimi": {
        "fi": "Nimi"
      },
      "toimitusaika": "2011-11-11T10:30",
      "toimitusosoite": {
        "osoite": {
          "osoite": {
            "fi": "Osoite"
          },
          "postinumeroKoodiUri": "posti_00350#2"
        },
        "sahkoposti": "sahkoposti@email.com",
        "verkkosivu": null
      },
      "toimitustapa": "osoite",
      "tyyppiKoodiUri": "liitetyypitamm_4#1"
    }
  ],
  "liitteetOnkoSamaToimitusaika": false,
  "liitteetOnkoSamaToimitusosoite": false,
  "liitteidenToimitusaika": null,
  "liitteidenToimitusosoite": null,
  "liitteidenToimitustapa": null,
  "metadata": {
    "aloituspaikat": {
      "ensikertalaisille": 49,
      "kuvaus": {},
      "lukumaara": 150
    },
    "hakukohteenLinja": null,
    "jarjestaaUrheilijanAmmKoulutusta": false,
    "kaytetaanHaunAlkamiskautta": false,
    "koulutuksenAlkamiskausi": {
      "alkamiskausityyppi": "tarkka alkamisajankohta",
      "henkilokohtaisenSuunnitelmanLisatiedot": {},
      "koulutuksenAlkamiskausiKoodiUri": null,
      "koulutuksenAlkamispaivamaara": "2021-04-16T00:00",
      "koulutuksenAlkamisvuosi": null,
      "koulutuksenPaattymispaivamaara": "2021-12-12T00:00"
    },
    "kynnysehto": {},
    "valintakokeidenYleiskuvaus": {
      "fi": "<p>Valintakokeiden kuvaus - fi</p>"
    },
    "valintaperusteenValintakokeidenLisatilaisuudet": [
      {
        "id": "testi-id-123",
        "tilaisuudet": [
          {
            "aika": {
              "alkaa": "2019-04-02T10:45",
              "paattyy": "2019-04-02T19:00"
            },
            "jarjestamispaikka": {
              "fi": "paikka"
            },
            "lisatietoja": {
              "fi": "<p>lisatietoja</p>"
            },
            "osoite": {
              "osoite": {
                "fi": "osoite"
              },
              "postinumeroKoodiUri": "posti_00350#2"
            }
          }
        ]
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "muuPohjakoulutusvaatimus": {},
  "nimi": {
    "fi": "Hakukohteen nimi"
  },
  "oid": "6.1.1.1.1.1",
  "organisaatioOid": "1.2.246.562.10.52251087186",
  "pohjakoulutusvaatimusKoodiUrit": [
    "pohjakoulutusvaatimuskouta_pk#1"
  ],
  "pohjakoulutusvaatimusTarkenne": {
    "fi": "<p>Fi tarkenne</p>"
  },
  "tila": "tallennettu",
  "toinenAsteOnkoKaksoistutkinto": true,
  "toteutusOid": "2.1.1.1.1.1",
  "valintakokeet": [
    {
      "metadata": {
        "erityisjarjestelytMahdollisia": true,
        "liittyyEnnakkovalmistautumista": true,
        "ohjeetEnnakkovalmistautumiseen": {
          "fi": "<p>Ohjeet ennakkovalmistautumiseen - fi</p>"
        },
        "ohjeetErityisjarjestelyihin": {
          "fi": "<p>Ohjeet erityisjärjestelyihin - fi</p>"
        },
        "tietoja": {
          "fi": "<p>Tietoa kokeesta - fi</p>"
        },
        "vahimmaispisteet": 10.03
      },
      "nimi": {
        "fi": "Kokeen nimi - fi"
      },
      "tilaisuudet": [
        {
          "aika": {
            "alkaa": "2019-04-16T08:44",
            "paattyy": "2019-04-18T08:44"
          },
          "jarjestamispaikka": {
            "fi": "Jarjestamispaikka - fi"
          },
          "lisatietoja": {
            "fi": "<p>fi lisatietoja</p>"
          },
          "osoite": {
            "osoite": {
              "fi": "fi osoite"
            },
            "postinumeroKoodiUri": "posti_00350#2"
          }
        }
      ],
      "tyyppiKoodiUri": "valintakokeentyyppi_1#1"
    }
  ],
  "valintaperusteId": "649adb37-cd4d-4846-91a9-84b58b90f928"
};

exports[`editHakukohde > should be able to delete hakukohde #0`] =
{
  "alkamiskausiKoodiUri": "kausi_k#1",
  "alkamisvuosi": "2024",
  "esikatselu": false,
  "externalId": null,
  "hakuOid": "4.1.1.1.1.1",
  "hakuajat": [
    {
      "alkaa": "2011-11-11T10:30",
      "paattyy": "2011-11-12T11:45"
    }
  ],
  "hakukohdeKoodiUri": null,
  "hakulomake": {},
  "hakulomakeAtaruId": "12345",
  "hakulomakeKuvaus": {},
  "hakulomakeLinkki": {},
  "hakulomaketyyppi": "ataru",
  "jarjestyspaikkaOid": "1.2.246.562.10.45854578546",
  "kaytetaanHaunAikataulua": false,
  "kaytetaanHaunHakulomaketta": false,
  "kielivalinta": [
    "fi"
  ],
  "liitteet": [
    {
      "kuvaus": {
        "fi": "<p>Kuvaus</p>"
      },
      "nimi": {
        "fi": "Nimi"
      },
      "toimitusaika": "2011-11-11T10:30",
      "toimitusosoite": {
        "osoite": {
          "osoite": {
            "fi": "Osoite"
          },
          "postinumeroKoodiUri": "posti_00350#2"
        },
        "sahkoposti": "sahkoposti@email.com",
        "verkkosivu": null
      },
      "toimitustapa": "osoite",
      "tyyppiKoodiUri": "liitetyypitamm_4#1"
    }
  ],
  "liitteetOnkoSamaToimitusaika": false,
  "liitteetOnkoSamaToimitusosoite": false,
  "liitteidenToimitusaika": null,
  "liitteidenToimitusosoite": null,
  "liitteidenToimitustapa": null,
  "metadata": {
    "aloituspaikat": {
      "ensikertalaisille": 49,
      "kuvaus": {},
      "lukumaara": 150
    },
    "hakukohteenLinja": null,
    "jarjestaaUrheilijanAmmKoulutusta": false,
    "kaytetaanHaunAlkamiskautta": false,
    "koulutuksenAlkamiskausi": {
      "alkamiskausityyppi": "tarkka alkamisajankohta",
      "henkilokohtaisenSuunnitelmanLisatiedot": {},
      "koulutuksenAlkamiskausiKoodiUri": null,
      "koulutuksenAlkamispaivamaara": "2021-04-16T00:00",
      "koulutuksenAlkamisvuosi": null,
      "koulutuksenPaattymispaivamaara": "2021-12-12T00:00"
    },
    "kynnysehto": {},
    "valintakokeidenYleiskuvaus": {
      "fi": "<p>Valintakokeiden kuvaus - fi</p>"
    },
    "valintaperusteenValintakokeidenLisatilaisuudet": [
      {
        "id": "testi-id-123",
        "tilaisuudet": [
          {
            "aika": {
              "alkaa": "2019-04-02T10:45",
              "paattyy": "2019-04-02T19:00"
            },
            "jarjestamispaikka": {
              "fi": "paikka"
            },
            "lisatietoja": {
              "fi": "<p>lisatietoja</p>"
            },
            "osoite": {
              "osoite": {
                "fi": "osoite"
              },
              "postinumeroKoodiUri": "posti_00350#2"
            }
          }
        ]
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "muuPohjakoulutusvaatimus": {},
  "nimi": {
    "fi": "Hakukohteen nimi"
  },
  "oid": "6.1.1.1.1.1",
  "organisaatioOid": "1.2.246.562.10.52251087186",
  "pohjakoulutusvaatimusKoodiUrit": [
    "pohjakoulutusvaatimuskouta_pk#1"
  ],
  "pohjakoulutusvaatimusTarkenne": {
    "fi": "<p>Fi tarkenne</p>"
  },
  "tila": "poistettu",
  "toinenAsteOnkoKaksoistutkinto": true,
  "toteutusOid": "2.1.1.1.1.1",
  "valintakokeet": [
    {
      "metadata": {
        "erityisjarjestelytMahdollisia": true,
        "liittyyEnnakkovalmistautumista": true,
        "ohjeetEnnakkovalmistautumiseen": {
          "fi": "<p>Ohjeet ennakkovalmistautumiseen - fi</p>"
        },
        "ohjeetErityisjarjestelyihin": {
          "fi": "<p>Ohjeet erityisjärjestelyihin - fi</p>"
        },
        "tietoja": {
          "fi": "<p>Tietoa kokeesta - fi</p>"
        },
        "vahimmaispisteet": 10.03
      },
      "nimi": {
        "fi": "Kokeen nimi - fi"
      },
      "tilaisuudet": [
        {
          "aika": {
            "alkaa": "2019-04-16T08:44",
            "paattyy": "2019-04-18T08:44"
          },
          "jarjestamispaikka": {
            "fi": "Jarjestamispaikka - fi"
          },
          "lisatietoja": {
            "fi": "<p>fi lisatietoja</p>"
          },
          "osoite": {
            "osoite": {
              "fi": "fi osoite"
            },
            "postinumeroKoodiUri": "posti_00350#2"
          }
        }
      ],
      "tyyppiKoodiUri": "valintakokeentyyppi_1#1"
    }
  ],
  "valintaperusteId": "649adb37-cd4d-4846-91a9-84b58b90f928"
};

exports[`createHakukohde > should be able to create hakukohde with muu hakulomake #0`] =
{
  "esikatselu": true,
  "externalId": null,
  "hakuOid": "4.1.1.1.1.1",
  "hakuajat": [],
  "hakukohdeKoodiUri": null,
  "hakulomakeAtaruId": null,
  "hakulomakeKuvaus": {},
  "hakulomakeLinkki": {
    "fi": "http://example.com"
  },
  "hakulomaketyyppi": "muu",
  "kaytetaanHaunAikataulua": true,
  "kaytetaanHaunHakulomaketta": false,
  "kielivalinta": [
    "fi"
  ],
  "liitteet": [],
  "liitteetOnkoSamaToimitusaika": false,
  "liitteetOnkoSamaToimitusosoite": false,
  "liitteidenToimitusaika": null,
  "liitteidenToimitusosoite": null,
  "liitteidenToimitustapa": null,
  "metadata": {
    "aloituspaikat": {
      "ensikertalaisille": null,
      "kuvaus": {},
      "lukumaara": 10
    },
    "hakukohteenLinja": null,
    "kaytetaanHaunAlkamiskautta": true,
    "koulutuksenAlkamiskausi": null,
    "kynnysehto": {},
    "valintakokeidenYleiskuvaus": {},
    "valintaperusteenValintakokeidenLisatilaisuudet": []
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Koulutuskeskus Salpaus, jatkuva haku, eläintenhoitaja"
  },
  "organisaatioOid": "1.2.246.562.10.52251087186",
  "pohjakoulutusvaatimusKoodiUrit": [
    "pohjakoulutusvaatimuskouta_pk#1"
  ],
  "pohjakoulutusvaatimusTarkenne": {
    "fi": "<p>Tarkenne</p>"
  },
  "tila": "tallennettu",
  "toinenAsteOnkoKaksoistutkinto": false,
  "toteutusOid": "2.1.1.1.1.1",
  "valintaperusteId": null
};

exports[`createHakukohde > should be able to create hakukohde with "ei sähköistä" hakulomake #0`] =
{
  "esikatselu": true,
  "externalId": null,
  "hakuOid": "4.1.1.1.1.1",
  "hakuajat": [],
  "hakukohdeKoodiUri": null,
  "hakulomakeAtaruId": null,
  "hakulomakeKuvaus": {
    "fi": "<p>hakulomake kuvaus</p>"
  },
  "hakulomakeLinkki": {},
  "hakulomaketyyppi": "ei sähköistä",
  "kaytetaanHaunAikataulua": true,
  "kaytetaanHaunHakulomaketta": false,
  "kielivalinta": [
    "fi"
  ],
  "liitteet": [],
  "liitteetOnkoSamaToimitusaika": false,
  "liitteetOnkoSamaToimitusosoite": false,
  "liitteidenToimitusaika": null,
  "liitteidenToimitusosoite": null,
  "liitteidenToimitustapa": null,
  "metadata": {
    "aloituspaikat": {
      "ensikertalaisille": 5,
      "kuvaus": {},
      "lukumaara": 10
    },
    "hakukohteenLinja": null,
    "kaytetaanHaunAlkamiskautta": true,
    "koulutuksenAlkamiskausi": null,
    "kynnysehto": {},
    "valintakokeidenYleiskuvaus": {},
    "valintaperusteenValintakokeidenLisatilaisuudet": []
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Koulutuskeskus Salpaus, jatkuva haku, eläintenhoitaja"
  },
  "organisaatioOid": "1.2.246.562.10.52251087186",
  "pohjakoulutusvaatimusKoodiUrit": [
    "pohjakoulutusvaatimuskouta_pk#1"
  ],
  "pohjakoulutusvaatimusTarkenne": {
    "fi": "<p>Tarkenne</p>"
  },
  "tila": "tallennettu",
  "toinenAsteOnkoKaksoistutkinto": false,
  "toteutusOid": "2.1.1.1.1.1",
  "valintaperusteId": null
};

exports[`createHakukohde > should be able to create hakukohde with lukiolinjat #0`] =
{
  "esikatselu": true,
  "externalId": null,
  "hakuOid": "4.1.1.1.1.1",
  "hakuajat": [
    {
      "alkaa": "2019-04-02T10:45",
      "paattyy": "2019-11-25T23:59"
    }
  ],
  "hakukohdeKoodiUri": null,
  "hakulomakeAtaruId": "lomake_1",
  "hakulomakeKuvaus": {},
  "hakulomakeLinkki": {},
  "hakulomaketyyppi": "ataru",
  "kaytetaanHaunAikataulua": false,
  "kaytetaanHaunHakulomaketta": false,
  "kielivalinta": [
    "fi"
  ],
  "liitteet": [],
  "liitteetOnkoSamaToimitusaika": false,
  "liitteetOnkoSamaToimitusosoite": false,
  "liitteidenToimitusaika": null,
  "liitteidenToimitusosoite": null,
  "liitteidenToimitustapa": null,
  "metadata": {
    "aloituspaikat": {
      "ensikertalaisille": null,
      "kuvaus": {},
      "lukumaara": 10
    },
    "hakukohteenLinja": {
      "alinHyvaksyttyKeskiarvo": 3.5,
      "linja": null,
      "lisatietoa": {
        "fi": "<p>Lisätietoa</p>"
      },
      "painotetutArvosanat": [
        {
          "koodiUrit": {
            "oppiaine": "painotettavatoppiaineetlukiossa_mu#1"
          },
          "painokerroin": 2
        }
      ]
    },
    "kaytetaanHaunAlkamiskautta": true,
    "koulutuksenAlkamiskausi": null,
    "kynnysehto": {},
    "valintakokeidenYleiskuvaus": {},
    "valintaperusteenValintakokeidenLisatilaisuudet": []
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "hakukohdelomake.lukionYleislinja"
  },
  "organisaatioOid": "1.2.246.562.10.52251087186",
  "pohjakoulutusvaatimusKoodiUrit": [
    "pohjakoulutusvaatimuskouta_pk#1"
  ],
  "pohjakoulutusvaatimusTarkenne": {
    "fi": "<p>Tarkenne</p>"
  },
  "tila": "tallennettu",
  "toinenAsteOnkoKaksoistutkinto": false,
  "toteutusOid": "2.1.1.1.1.1",
  "valintaperusteId": null
};

exports[`createHaku > should be able to create haku with ataru hakulomake #0`] =
{
  "ajastettuHaunJaHakukohteidenArkistointi": null,
  "ajastettuJulkaisu": "2019-12-05T06:45",
  "externalId": null,
  "hakuajat": [
    {
      "alkaa": "2019-04-02T10:45",
      "paattyy": "2019-11-25T23:59"
    }
  ],
  "hakukohteenLiittamisenTakaraja": "2019-12-24T21:20",
  "hakukohteenMuokkaamisenTakaraja": "2019-12-11T19:15",
  "hakulomakeAtaruId": "lomake_1",
  "hakulomakeKuvaus": {},
  "hakulomakeLinkki": {},
  "hakulomaketyyppi": "ataru",
  "hakutapaKoodiUri": "hakutapa_01#1",
  "kielivalinta": [
    "fi"
  ],
  "kohdejoukkoKoodiUri": "haunkohdejoukko_12#1",
  "kohdejoukonTarkenneKoodiUri": "haunkohdejoukontarkenne_2#1",
  "metadata": {
    "koulutuksenAlkamiskausi": {
      "alkamiskausityyppi": "alkamiskausi ja -vuosi",
      "henkilokohtaisenSuunnitelmanLisatiedot": {},
      "koulutuksenAlkamiskausiKoodiUri": "kausi_k#1",
      "koulutuksenAlkamispaivamaara": null,
      "koulutuksenAlkamisvuosi": 2035,
      "koulutuksenPaattymispaivamaara": null
    },
    "tulevaisuudenAikataulu": [
      {
        "alkaa": "2019-10-11T09:05",
        "paattyy": "2019-12-25T20:30"
      }
    ],
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "nimi"
        },
        "puhelinnumero": {
          "fi": "puhelin"
        },
        "sahkoposti": {
          "fi": "sähköposti"
        },
        "titteli": {
          "fi": "titteli"
        },
        "wwwSivu": {
          "fi": "http://verkkosivu"
        }
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "haun nimi"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "tila": "julkaistu"
};

exports[`createHaku > should be able to create haku with muu hakulomake #0`] =
{
  "ajastettuJulkaisu": null,
  "externalId": null,
  "hakuajat": [],
  "hakukohteenLiittamisenTakaraja": null,
  "hakukohteenMuokkaamisenTakaraja": null,
  "hakulomakeAtaruId": null,
  "hakulomakeKuvaus": {},
  "hakulomakeLinkki": {
    "fi": "http://example.com"
  },
  "hakulomaketyyppi": "muu",
  "hakutapaKoodiUri": null,
  "kielivalinta": [
    "fi"
  ],
  "kohdejoukkoKoodiUri": null,
  "kohdejoukonTarkenneKoodiUri": null,
  "metadata": {
    "koulutuksenAlkamiskausi": null,
    "tulevaisuudenAikataulu": [],
    "yhteyshenkilot": []
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "haun nimi"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "tila": "tallennettu"
};

exports[`createHaku > should be able to create haku with "ei sähköistä" hakulomake #0`] =
{
  "ajastettuJulkaisu": null,
  "externalId": null,
  "hakuajat": [],
  "hakukohteenLiittamisenTakaraja": null,
  "hakukohteenMuokkaamisenTakaraja": null,
  "hakulomakeAtaruId": null,
  "hakulomakeKuvaus": {
    "fi": "<p>hakulomake kuvaus</p>"
  },
  "hakulomakeLinkki": {},
  "hakulomaketyyppi": "ei sähköistä",
  "hakutapaKoodiUri": null,
  "kielivalinta": [
    "fi"
  ],
  "kohdejoukkoKoodiUri": null,
  "kohdejoukonTarkenneKoodiUri": null,
  "metadata": {
    "koulutuksenAlkamiskausi": null,
    "tulevaisuudenAikataulu": [],
    "yhteyshenkilot": []
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "haun nimi"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "tila": "tallennettu"
};

exports[`editHaku > should be able to edit haku #0`] =
{
  "ajastettuHaunJaHakukohteidenArkistointi": null,
  "ajastettuJulkaisu": "2019-12-05T06:45",
  "externalId": null,
  "hakuajat": [
    {
      "alkaa": "2019-02-08T07:05",
      "paattyy": "2020-02-08T07:05"
    }
  ],
  "hakukohteenLiittamisenTakaraja": "2019-02-08T07:05",
  "hakukohteenMuokkaamisenTakaraja": "2019-02-08T07:05",
  "hakulomakeAtaruId": "12345",
  "hakulomakeKuvaus": {},
  "hakulomakeLinkki": {},
  "hakulomaketyyppi": "ataru",
  "hakutapaKoodiUri": "hakutapa_0#1",
  "kielivalinta": [
    "fi"
  ],
  "kohdejoukkoKoodiUri": "haunkohdejoukko_0#1",
  "kohdejoukonTarkenneKoodiUri": null,
  "metadata": {
    "koulutuksenAlkamiskausi": {
      "alkamiskausityyppi": "alkamiskausi ja -vuosi",
      "henkilokohtaisenSuunnitelmanLisatiedot": {},
      "koulutuksenAlkamiskausiKoodiUri": "kausi_k#1",
      "koulutuksenAlkamispaivamaara": null,
      "koulutuksenAlkamisvuosi": 2035,
      "koulutuksenPaattymispaivamaara": null
    },
    "tulevaisuudenAikataulu": [
      {
        "alkaa": "2019-10-11T09:05",
        "paattyy": "2019-12-25T20:30"
      }
    ],
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "nimi"
        },
        "puhelinnumero": {
          "fi": "puhelin"
        },
        "sahkoposti": {
          "fi": "sähkoposti"
        },
        "titteli": {
          "fi": "titteli"
        },
        "wwwSivu": {
          "fi": "http://verkkosivu"
        }
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Haku"
  },
  "oid": "2.1.1.1.1.1",
  "organisaatioOid": "1.1.1.1.1.1",
  "tila": "tallennettu"
};
